@@ -1,3 +1,7 @@
+2006-12-30 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* RijndaelTransform32HighSpeed.cs: 無駄なインクリメント処理を削除
+
 2006-12-27 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* RijndaelTransform32Balanced.cs: RijndaelTransform32LowMemory.csから移動
